2000-05-02  Kriston J. Rehberg  <Kriston@AOL.COM>

	* nsftp module added.  Contributed by Eric O'Laughlen
	<erico@aol.net>.

2000-04-12  Kriston J. Rehberg  <Kriston@AOL.COM>

	*** AOLserver 3.0 FINAL Released ***
	
2000-04-12  Kriston J. Rehberg  <Kriston@AOL.COM>

	* tcl8.3.0/win/tclWinSock.c: In Win32 only, Tcl 8.3.0 deadlocked
	when opening a socket.  This affected anything that used
	ns_sockopen, e.g. ns_sendmail.  Many thanks to Curtis Galloway
	<curtisg@arsdigita.com> for finding and fixing this bug which
	should also find its way into the Tcl distribution.

	* scripts/nsd.tcl: Now effects a new out-of-box experience.
	Automatically figures out the home directory of AOLserver.
	Figures out whether to load nscp based on whether a valid user and
	password exist.  Only loads nsssl if cert/key files are present,
	respectively.  The only thing that needs manual intervention now
	is nsperm.  You can also start AOLserver from anywhere on your
	system now -- not just from its home directory.
	
	* nsd/nsmain.c, nsd/tclstubs.cpp, nsd/tclmisc.c, nsd/nsd.h:
	Locates the executable using NsTclFindExecutable on Tcl 7.6 and
	8.x.  Tcl commands [ns_info argv0] and [ns_info nsd] added.
	
	* nsssl2/Makefile: The nsssl module's pathnames were getting lost.
	It now installs into servers/server1/modules/nsssl directory
	instead of nsssl2.

2000-04-11  Pete Jansson <petej@clickvision.com>

	* nssybpd/Makefile,nssybpd.c: Corrected to build on Linux.

	* nsext/nsext.c (DbProxyTimedIO,DbProxyGetString): Fixed latent
	bug in DbProxyTimedIO which impaired performance; changed
	DbProxyGetString back to using DbProxyTimedIO.  If Shai Bentov
	<shai@netscape.com> hadn't found the previous change, I don't
	know how I would have figured this one out.  Also pass empty
	strings to database proxy if parameters are not specified.

2000-04-10  Kriston J. Rehberg  <Kriston@AOL.COM>

	* nsext/nsext.c (DbProxyGetString): Uses its own version of